--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
     "bootstrap": "5.1.3",
     "i": "^0.3.7",
     "node-sass": "4.14",
